Basic file input and process control block implementation

--- a/VirtualMemSim/VirtualMemSim.csproj
+++ b/VirtualMemSim/VirtualMemSim.csproj
@@ -93,6 +93,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VirtualMemLib\VirtualMemLib.csproj">
+      <Project>{1a7d0d85-3021-4b17-9809-61f54e2f618b}</Project>
+      <Name>VirtualMemLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
