--- a/VirtualMemSimConsole/VirtualMemSimConsole.csproj
+++ b/VirtualMemSimConsole/VirtualMemSimConsole.csproj
@@ -41,11 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="StartMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VirtualMemLib\VirtualMemLib.csproj">
+      <Project>{1a7d0d85-3021-4b17-9809-61f54e2f618b}</Project>
+      <Name>VirtualMemLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
