--- a/VirtualMemLib/VirtualMemLib.csproj
+++ b/VirtualMemLib/VirtualMemLib.csproj
@@ -39,7 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Page.cs" />
     <Compile Include="PCB.cs" />
+    <Compile Include="ProcessTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
